@@ -36,6 +36,7 @@ Version 0.0.4b (in progress)
 * [Fixed] Broken stats reset functionality for owner names.
 * [Fixed] Overall, Defensive and Offensive pages now show "No Search Results" message when search results are empty.
 * [Fixed] Broken variable assignment.
+* [Improved] Handling of theme uninstalls and changes to default themes.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
